# internal/api/server/routers.go
@@ -9,6 +9,7 @@ type Routers interface {
 	HealthCheck(*fasthttp.RequestCtx, fasthttprouter.Params)
 	HandleDocs(*fasthttp.RequestCtx, fasthttprouter.Params)
 
+	GetCitiesCashPay(*fasthttp.RequestCtx, fasthttprouter.Params)
 	GetServiceCost(*fasthttp.RequestCtx, fasthttprouter.Params)
 }
 
@@ -19,6 +20,7 @@ func NewRouters(routers Routers) func(ctx *fasthttp.RequestCtx) {
 	router.GET("/health", routers.HealthCheck)
 	router.GET("/swagger/*filepath", routers.HandleDocs)
 
+	router.GET("/api/v1/get-cities-cash-pay", routers.GetCitiesCashPay)
 	router.POST("/api/v1/get-service-cost", routers.GetServiceCost)
 
 	return Handler
